Fix scrollbar issue during navigation animation.
A horizontal scrollbar would appear for tall pages, because of the appearance of
a vertical scrollbar. Since I never need horizontal scrolling, I simply disabled
it completely now.

--- a/site/content/less/denvelop.less
+++ b/site/content/less/denvelop.less
@@ -20,6 +20,7 @@ html {
 body {
     .bg-color(@color-main);
     height: 100%;
+    overflow-x: hidden; // to prevent scrollbar from occuring on tall pages
 }
 
 // general styling
